[tool.poetry]
name = "repl_python3_Jeopardy-Quiz"
version = "0.1.0"
description = ""
authors = ["SubduedCrane651 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
art = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
